tests/fixtures/valid/string_operations.mmd
flowchart TD
    Start --> A[msg = 'hello']
    A --> B[println msg]
    B --> C[num = 42]
    C --> D[numStr = num as str]
    D --> E[println numStr]
    E --> End
