tests/fixtures/invalid/condition_custom_label.mmd
flowchart TD
    Start --> A{true?}
    A -->|foo| B[println 'foo']
    A -->|No| C[println 'no']
    B --> End
    C --> End
